// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WORKOUT should match snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Workout />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <form
        className="Workout-form"
>
        <div
                className="Workout-info"
        >
                <input
                        className="workout-info-inputs workout-name"
                        name="workoutName"
                        onChange={[Function]}
                        placeholder="Workout Name"
                        type="text"
                        value=""
                />
                <input
                        className="workout-info-inputs workout-description"
                        name="workoutDesc"
                        onChange={[Function]}
                        placeholder="Workout Description (Optional)"
                        type="text"
                        value=""
                />
        </div>
        <div>
                <h4
                        className="exercise-header"
                >
                        Exercises
                </h4>
                <ul
                        className="rendered-exercises"
                >
                        
                </ul>
                <div
                        className="create-exercises"
                >
                        <input
                                className="exercise-inputs exercise-number"
                                name="reps"
                                onChange={[Function]}
                                placeholder="Reps"
                                type="number"
                                value=""
                        />
                        <input
                                className="exercise-inputs exercise-name"
                                name="exercise"
                                onChange={[Function]}
                                placeholder="Exercise"
                                type="text"
                                value=""
                        />
                        <button
                                className="exercise-button"
                                onClick={[Function]}
                        >
                                +
                        </button>
                </div>
        </div>
        <button
                className="Workout-post-btn"
                onClick={[Function]}
        >
                <h3>
                        Post Workout
                </h3>
        </button>
</form>,
      "className": "Workout",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="Workout-info"
>
            <input
                        className="workout-info-inputs workout-name"
                        name="workoutName"
                        onChange={[Function]}
                        placeholder="Workout Name"
                        type="text"
                        value=""
            />
            <input
                        className="workout-info-inputs workout-description"
                        name="workoutDesc"
                        onChange={[Function]}
                        placeholder="Workout Description (Optional)"
                        type="text"
                        value=""
            />
</div>,
          <div>
            <h4
                        className="exercise-header"
            >
                        Exercises
            </h4>
            <ul
                        className="rendered-exercises"
            >
                        
            </ul>
            <div
                        className="create-exercises"
            >
                        <input
                                    className="exercise-inputs exercise-number"
                                    name="reps"
                                    onChange={[Function]}
                                    placeholder="Reps"
                                    type="number"
                                    value=""
                        />
                        <input
                                    className="exercise-inputs exercise-name"
                                    name="exercise"
                                    onChange={[Function]}
                                    placeholder="Exercise"
                                    type="text"
                                    value=""
                        />
                        <button
                                    className="exercise-button"
                                    onClick={[Function]}
                        >
                                    +
                        </button>
            </div>
</div>,
          <button
            className="Workout-post-btn"
            onClick={[Function]}
>
            <h3>
                        Post Workout
            </h3>
</button>,
        ],
        "className": "Workout-form",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <input
                className="workout-info-inputs workout-name"
                name="workoutName"
                onChange={[Function]}
                placeholder="Workout Name"
                type="text"
                value=""
/>,
              <input
                className="workout-info-inputs workout-description"
                name="workoutDesc"
                onChange={[Function]}
                placeholder="Workout Description (Optional)"
                type="text"
                value=""
/>,
            ],
            "className": "Workout-info",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "className": "workout-info-inputs workout-name",
                "name": "workoutName",
                "onChange": [Function],
                "placeholder": "Workout Name",
                "type": "text",
                "value": "",
              },
              "ref": null,
              "rendered": null,
              "type": "input",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "className": "workout-info-inputs workout-description",
                "name": "workoutDesc",
                "onChange": [Function],
                "placeholder": "Workout Description (Optional)",
                "type": "text",
                "value": "",
              },
              "ref": null,
              "rendered": null,
              "type": "input",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <h4
                className="exercise-header"
>
                Exercises
</h4>,
              <ul
                className="rendered-exercises"
>
                
</ul>,
              <div
                className="create-exercises"
>
                <input
                                className="exercise-inputs exercise-number"
                                name="reps"
                                onChange={[Function]}
                                placeholder="Reps"
                                type="number"
                                value=""
                />
                <input
                                className="exercise-inputs exercise-name"
                                name="exercise"
                                onChange={[Function]}
                                placeholder="Exercise"
                                type="text"
                                value=""
                />
                <button
                                className="exercise-button"
                                onClick={[Function]}
                >
                                +
                </button>
</div>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Exercises",
                "className": "exercise-header",
              },
              "ref": null,
              "rendered": "Exercises",
              "type": "h4",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [],
                "className": "rendered-exercises",
              },
              "ref": null,
              "rendered": Array [],
              "type": "ul",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <input
                    className="exercise-inputs exercise-number"
                    name="reps"
                    onChange={[Function]}
                    placeholder="Reps"
                    type="number"
                    value=""
/>,
                  <input
                    className="exercise-inputs exercise-name"
                    name="exercise"
                    onChange={[Function]}
                    placeholder="Exercise"
                    type="text"
                    value=""
/>,
                  <button
                    className="exercise-button"
                    onClick={[Function]}
>
                    +
</button>,
                ],
                "className": "create-exercises",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "className": "exercise-inputs exercise-number",
                    "name": "reps",
                    "onChange": [Function],
                    "placeholder": "Reps",
                    "type": "number",
                    "value": "",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "input",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "className": "exercise-inputs exercise-name",
                    "name": "exercise",
                    "onChange": [Function],
                    "placeholder": "Exercise",
                    "type": "text",
                    "value": "",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "input",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "+",
                    "className": "exercise-button",
                    "onClick": [Function],
                  },
                  "ref": null,
                  "rendered": "+",
                  "type": "button",
                },
              ],
              "type": "div",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <h3>
              Post Workout
</h3>,
            "className": "Workout-post-btn",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Post Workout",
            },
            "ref": null,
            "rendered": "Post Workout",
            "type": "h3",
          },
          "type": "button",
        },
      ],
      "type": "form",
    },
    "type": "section",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <form
          className="Workout-form"
>
          <div
                    className="Workout-info"
          >
                    <input
                              className="workout-info-inputs workout-name"
                              name="workoutName"
                              onChange={[Function]}
                              placeholder="Workout Name"
                              type="text"
                              value=""
                    />
                    <input
                              className="workout-info-inputs workout-description"
                              name="workoutDesc"
                              onChange={[Function]}
                              placeholder="Workout Description (Optional)"
                              type="text"
                              value=""
                    />
          </div>
          <div>
                    <h4
                              className="exercise-header"
                    >
                              Exercises
                    </h4>
                    <ul
                              className="rendered-exercises"
                    >
                              
                    </ul>
                    <div
                              className="create-exercises"
                    >
                              <input
                                        className="exercise-inputs exercise-number"
                                        name="reps"
                                        onChange={[Function]}
                                        placeholder="Reps"
                                        type="number"
                                        value=""
                              />
                              <input
                                        className="exercise-inputs exercise-name"
                                        name="exercise"
                                        onChange={[Function]}
                                        placeholder="Exercise"
                                        type="text"
                                        value=""
                              />
                              <button
                                        className="exercise-button"
                                        onClick={[Function]}
                              >
                                        +
                              </button>
                    </div>
          </div>
          <button
                    className="Workout-post-btn"
                    onClick={[Function]}
          >
                    <h3>
                              Post Workout
                    </h3>
          </button>
</form>,
        "className": "Workout",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="Workout-info"
>
              <input
                            className="workout-info-inputs workout-name"
                            name="workoutName"
                            onChange={[Function]}
                            placeholder="Workout Name"
                            type="text"
                            value=""
              />
              <input
                            className="workout-info-inputs workout-description"
                            name="workoutDesc"
                            onChange={[Function]}
                            placeholder="Workout Description (Optional)"
                            type="text"
                            value=""
              />
</div>,
            <div>
              <h4
                            className="exercise-header"
              >
                            Exercises
              </h4>
              <ul
                            className="rendered-exercises"
              >
                            
              </ul>
              <div
                            className="create-exercises"
              >
                            <input
                                          className="exercise-inputs exercise-number"
                                          name="reps"
                                          onChange={[Function]}
                                          placeholder="Reps"
                                          type="number"
                                          value=""
                            />
                            <input
                                          className="exercise-inputs exercise-name"
                                          name="exercise"
                                          onChange={[Function]}
                                          placeholder="Exercise"
                                          type="text"
                                          value=""
                            />
                            <button
                                          className="exercise-button"
                                          onClick={[Function]}
                            >
                                          +
                            </button>
              </div>
</div>,
            <button
              className="Workout-post-btn"
              onClick={[Function]}
>
              <h3>
                            Post Workout
              </h3>
</button>,
          ],
          "className": "Workout-form",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <input
                  className="workout-info-inputs workout-name"
                  name="workoutName"
                  onChange={[Function]}
                  placeholder="Workout Name"
                  type="text"
                  value=""
/>,
                <input
                  className="workout-info-inputs workout-description"
                  name="workoutDesc"
                  onChange={[Function]}
                  placeholder="Workout Description (Optional)"
                  type="text"
                  value=""
/>,
              ],
              "className": "Workout-info",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "className": "workout-info-inputs workout-name",
                  "name": "workoutName",
                  "onChange": [Function],
                  "placeholder": "Workout Name",
                  "type": "text",
                  "value": "",
                },
                "ref": null,
                "rendered": null,
                "type": "input",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "className": "workout-info-inputs workout-description",
                  "name": "workoutDesc",
                  "onChange": [Function],
                  "placeholder": "Workout Description (Optional)",
                  "type": "text",
                  "value": "",
                },
                "ref": null,
                "rendered": null,
                "type": "input",
              },
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <h4
                  className="exercise-header"
>
                  Exercises
</h4>,
                <ul
                  className="rendered-exercises"
>
                  
</ul>,
                <div
                  className="create-exercises"
>
                  <input
                                    className="exercise-inputs exercise-number"
                                    name="reps"
                                    onChange={[Function]}
                                    placeholder="Reps"
                                    type="number"
                                    value=""
                  />
                  <input
                                    className="exercise-inputs exercise-name"
                                    name="exercise"
                                    onChange={[Function]}
                                    placeholder="Exercise"
                                    type="text"
                                    value=""
                  />
                  <button
                                    className="exercise-button"
                                    onClick={[Function]}
                  >
                                    +
                  </button>
</div>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Exercises",
                  "className": "exercise-header",
                },
                "ref": null,
                "rendered": "Exercises",
                "type": "h4",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [],
                  "className": "rendered-exercises",
                },
                "ref": null,
                "rendered": Array [],
                "type": "ul",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <input
                      className="exercise-inputs exercise-number"
                      name="reps"
                      onChange={[Function]}
                      placeholder="Reps"
                      type="number"
                      value=""
/>,
                    <input
                      className="exercise-inputs exercise-name"
                      name="exercise"
                      onChange={[Function]}
                      placeholder="Exercise"
                      type="text"
                      value=""
/>,
                    <button
                      className="exercise-button"
                      onClick={[Function]}
>
                      +
</button>,
                  ],
                  "className": "create-exercises",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "className": "exercise-inputs exercise-number",
                      "name": "reps",
                      "onChange": [Function],
                      "placeholder": "Reps",
                      "type": "number",
                      "value": "",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "input",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "className": "exercise-inputs exercise-name",
                      "name": "exercise",
                      "onChange": [Function],
                      "placeholder": "Exercise",
                      "type": "text",
                      "value": "",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "input",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "+",
                      "className": "exercise-button",
                      "onClick": [Function],
                    },
                    "ref": null,
                    "rendered": "+",
                    "type": "button",
                  },
                ],
                "type": "div",
              },
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <h3>
                Post Workout
</h3>,
              "className": "Workout-post-btn",
              "onClick": [Function],
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Post Workout",
              },
              "ref": null,
              "rendered": "Post Workout",
              "type": "h3",
            },
            "type": "button",
          },
        ],
        "type": "form",
      },
      "type": "section",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`WORKOUT should return jsx based on the exercises array when renderExercises is called 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Workout />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <form
        className="Workout-form"
>
        <div
                className="Workout-info"
        >
                <input
                        className="workout-info-inputs workout-name"
                        name="workoutName"
                        onChange={[Function]}
                        placeholder="Workout Name"
                        type="text"
                        value=""
                />
                <input
                        className="workout-info-inputs workout-description"
                        name="workoutDesc"
                        onChange={[Function]}
                        placeholder="Workout Description (Optional)"
                        type="text"
                        value=""
                />
        </div>
        <div>
                <h4
                        className="exercise-header"
                >
                        Exercises
                </h4>
                <ul
                        className="rendered-exercises"
                >
                        <li
                                className="rendered-exercise"
                        >
                                <h5
                                        className="rendered-ex-info"
                                >
                                        5
                                </h5>
                                <h5
                                        className="rendered-ex-info"
                                >
                                        some exercise
                                </h5>
                                <button
                                        className="rendered-ex-btn"
                                        id={1519148514421}
                                        onClick={[Function]}
                                >
                                        -
                                </button>
                        </li>
                </ul>
                <div
                        className="create-exercises"
                >
                        <input
                                className="exercise-inputs exercise-number"
                                name="reps"
                                onChange={[Function]}
                                placeholder="Reps"
                                type="number"
                                value=""
                        />
                        <input
                                className="exercise-inputs exercise-name"
                                name="exercise"
                                onChange={[Function]}
                                placeholder="Exercise"
                                type="text"
                                value=""
                        />
                        <button
                                className="exercise-button"
                                onClick={[Function]}
                        >
                                +
                        </button>
                </div>
        </div>
        <button
                className="Workout-post-btn"
                onClick={[Function]}
        >
                <h3>
                        Post Workout
                </h3>
        </button>
</form>,
      "className": "Workout",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="Workout-info"
>
            <input
                        className="workout-info-inputs workout-name"
                        name="workoutName"
                        onChange={[Function]}
                        placeholder="Workout Name"
                        type="text"
                        value=""
            />
            <input
                        className="workout-info-inputs workout-description"
                        name="workoutDesc"
                        onChange={[Function]}
                        placeholder="Workout Description (Optional)"
                        type="text"
                        value=""
            />
</div>,
          <div>
            <h4
                        className="exercise-header"
            >
                        Exercises
            </h4>
            <ul
                        className="rendered-exercises"
            >
                        <li
                                    className="rendered-exercise"
                        >
                                    <h5
                                                className="rendered-ex-info"
                                    >
                                                5
                                    </h5>
                                    <h5
                                                className="rendered-ex-info"
                                    >
                                                some exercise
                                    </h5>
                                    <button
                                                className="rendered-ex-btn"
                                                id={1519148514421}
                                                onClick={[Function]}
                                    >
                                                -
                                    </button>
                        </li>
            </ul>
            <div
                        className="create-exercises"
            >
                        <input
                                    className="exercise-inputs exercise-number"
                                    name="reps"
                                    onChange={[Function]}
                                    placeholder="Reps"
                                    type="number"
                                    value=""
                        />
                        <input
                                    className="exercise-inputs exercise-name"
                                    name="exercise"
                                    onChange={[Function]}
                                    placeholder="Exercise"
                                    type="text"
                                    value=""
                        />
                        <button
                                    className="exercise-button"
                                    onClick={[Function]}
                        >
                                    +
                        </button>
            </div>
</div>,
          <button
            className="Workout-post-btn"
            onClick={[Function]}
>
            <h3>
                        Post Workout
            </h3>
</button>,
        ],
        "className": "Workout-form",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <input
                className="workout-info-inputs workout-name"
                name="workoutName"
                onChange={[Function]}
                placeholder="Workout Name"
                type="text"
                value=""
/>,
              <input
                className="workout-info-inputs workout-description"
                name="workoutDesc"
                onChange={[Function]}
                placeholder="Workout Description (Optional)"
                type="text"
                value=""
/>,
            ],
            "className": "Workout-info",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "className": "workout-info-inputs workout-name",
                "name": "workoutName",
                "onChange": [Function],
                "placeholder": "Workout Name",
                "type": "text",
                "value": "",
              },
              "ref": null,
              "rendered": null,
              "type": "input",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "className": "workout-info-inputs workout-description",
                "name": "workoutDesc",
                "onChange": [Function],
                "placeholder": "Workout Description (Optional)",
                "type": "text",
                "value": "",
              },
              "ref": null,
              "rendered": null,
              "type": "input",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <h4
                className="exercise-header"
>
                Exercises
</h4>,
              <ul
                className="rendered-exercises"
>
                <li
                                className="rendered-exercise"
                >
                                <h5
                                                className="rendered-ex-info"
                                >
                                                5
                                </h5>
                                <h5
                                                className="rendered-ex-info"
                                >
                                                some exercise
                                </h5>
                                <button
                                                className="rendered-ex-btn"
                                                id={1519148514421}
                                                onClick={[Function]}
                                >
                                                -
                                </button>
                </li>
</ul>,
              <div
                className="create-exercises"
>
                <input
                                className="exercise-inputs exercise-number"
                                name="reps"
                                onChange={[Function]}
                                placeholder="Reps"
                                type="number"
                                value=""
                />
                <input
                                className="exercise-inputs exercise-name"
                                name="exercise"
                                onChange={[Function]}
                                placeholder="Exercise"
                                type="text"
                                value=""
                />
                <button
                                className="exercise-button"
                                onClick={[Function]}
                >
                                +
                </button>
</div>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Exercises",
                "className": "exercise-header",
              },
              "ref": null,
              "rendered": "Exercises",
              "type": "h4",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <li
                    className="rendered-exercise"
>
                    <h5
                                        className="rendered-ex-info"
                    >
                                        5
                    </h5>
                    <h5
                                        className="rendered-ex-info"
                    >
                                        some exercise
                    </h5>
                    <button
                                        className="rendered-ex-btn"
                                        id={1519148514421}
                                        onClick={[Function]}
                    >
                                        -
                    </button>
</li>,
                ],
                "className": "rendered-exercises",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": "1519148514421",
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      <h5
                        className="rendered-ex-info"
>
                        5
</h5>,
                      <h5
                        className="rendered-ex-info"
>
                        some exercise
</h5>,
                      <button
                        className="rendered-ex-btn"
                        id={1519148514421}
                        onClick={[Function]}
>
                        -
</button>,
                    ],
                    "className": "rendered-exercise",
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": 5,
                        "className": "rendered-ex-info",
                      },
                      "ref": null,
                      "rendered": 5,
                      "type": "h5",
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": "some exercise",
                        "className": "rendered-ex-info",
                      },
                      "ref": null,
                      "rendered": "some exercise",
                      "type": "h5",
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": "-",
                        "className": "rendered-ex-btn",
                        "id": 1519148514421,
                        "onClick": [Function],
                      },
                      "ref": null,
                      "rendered": "-",
                      "type": "button",
                    },
                  ],
                  "type": "li",
                },
              ],
              "type": "ul",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <input
                    className="exercise-inputs exercise-number"
                    name="reps"
                    onChange={[Function]}
                    placeholder="Reps"
                    type="number"
                    value=""
/>,
                  <input
                    className="exercise-inputs exercise-name"
                    name="exercise"
                    onChange={[Function]}
                    placeholder="Exercise"
                    type="text"
                    value=""
/>,
                  <button
                    className="exercise-button"
                    onClick={[Function]}
>
                    +
</button>,
                ],
                "className": "create-exercises",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "className": "exercise-inputs exercise-number",
                    "name": "reps",
                    "onChange": [Function],
                    "placeholder": "Reps",
                    "type": "number",
                    "value": "",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "input",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "className": "exercise-inputs exercise-name",
                    "name": "exercise",
                    "onChange": [Function],
                    "placeholder": "Exercise",
                    "type": "text",
                    "value": "",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "input",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "+",
                    "className": "exercise-button",
                    "onClick": [Function],
                  },
                  "ref": null,
                  "rendered": "+",
                  "type": "button",
                },
              ],
              "type": "div",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <h3>
              Post Workout
</h3>,
            "className": "Workout-post-btn",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Post Workout",
            },
            "ref": null,
            "rendered": "Post Workout",
            "type": "h3",
          },
          "type": "button",
        },
      ],
      "type": "form",
    },
    "type": "section",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <form
          className="Workout-form"
>
          <div
                    className="Workout-info"
          >
                    <input
                              className="workout-info-inputs workout-name"
                              name="workoutName"
                              onChange={[Function]}
                              placeholder="Workout Name"
                              type="text"
                              value=""
                    />
                    <input
                              className="workout-info-inputs workout-description"
                              name="workoutDesc"
                              onChange={[Function]}
                              placeholder="Workout Description (Optional)"
                              type="text"
                              value=""
                    />
          </div>
          <div>
                    <h4
                              className="exercise-header"
                    >
                              Exercises
                    </h4>
                    <ul
                              className="rendered-exercises"
                    >
                              <li
                                        className="rendered-exercise"
                              >
                                        <h5
                                                  className="rendered-ex-info"
                                        >
                                                  5
                                        </h5>
                                        <h5
                                                  className="rendered-ex-info"
                                        >
                                                  some exercise
                                        </h5>
                                        <button
                                                  className="rendered-ex-btn"
                                                  id={1519148514421}
                                                  onClick={[Function]}
                                        >
                                                  -
                                        </button>
                              </li>
                    </ul>
                    <div
                              className="create-exercises"
                    >
                              <input
                                        className="exercise-inputs exercise-number"
                                        name="reps"
                                        onChange={[Function]}
                                        placeholder="Reps"
                                        type="number"
                                        value=""
                              />
                              <input
                                        className="exercise-inputs exercise-name"
                                        name="exercise"
                                        onChange={[Function]}
                                        placeholder="Exercise"
                                        type="text"
                                        value=""
                              />
                              <button
                                        className="exercise-button"
                                        onClick={[Function]}
                              >
                                        +
                              </button>
                    </div>
          </div>
          <button
                    className="Workout-post-btn"
                    onClick={[Function]}
          >
                    <h3>
                              Post Workout
                    </h3>
          </button>
</form>,
        "className": "Workout",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="Workout-info"
>
              <input
                            className="workout-info-inputs workout-name"
                            name="workoutName"
                            onChange={[Function]}
                            placeholder="Workout Name"
                            type="text"
                            value=""
              />
              <input
                            className="workout-info-inputs workout-description"
                            name="workoutDesc"
                            onChange={[Function]}
                            placeholder="Workout Description (Optional)"
                            type="text"
                            value=""
              />
</div>,
            <div>
              <h4
                            className="exercise-header"
              >
                            Exercises
              </h4>
              <ul
                            className="rendered-exercises"
              >
                            <li
                                          className="rendered-exercise"
                            >
                                          <h5
                                                        className="rendered-ex-info"
                                          >
                                                        5
                                          </h5>
                                          <h5
                                                        className="rendered-ex-info"
                                          >
                                                        some exercise
                                          </h5>
                                          <button
                                                        className="rendered-ex-btn"
                                                        id={1519148514421}
                                                        onClick={[Function]}
                                          >
                                                        -
                                          </button>
                            </li>
              </ul>
              <div
                            className="create-exercises"
              >
                            <input
                                          className="exercise-inputs exercise-number"
                                          name="reps"
                                          onChange={[Function]}
                                          placeholder="Reps"
                                          type="number"
                                          value=""
                            />
                            <input
                                          className="exercise-inputs exercise-name"
                                          name="exercise"
                                          onChange={[Function]}
                                          placeholder="Exercise"
                                          type="text"
                                          value=""
                            />
                            <button
                                          className="exercise-button"
                                          onClick={[Function]}
                            >
                                          +
                            </button>
              </div>
</div>,
            <button
              className="Workout-post-btn"
              onClick={[Function]}
>
              <h3>
                            Post Workout
              </h3>
</button>,
          ],
          "className": "Workout-form",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <input
                  className="workout-info-inputs workout-name"
                  name="workoutName"
                  onChange={[Function]}
                  placeholder="Workout Name"
                  type="text"
                  value=""
/>,
                <input
                  className="workout-info-inputs workout-description"
                  name="workoutDesc"
                  onChange={[Function]}
                  placeholder="Workout Description (Optional)"
                  type="text"
                  value=""
/>,
              ],
              "className": "Workout-info",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "className": "workout-info-inputs workout-name",
                  "name": "workoutName",
                  "onChange": [Function],
                  "placeholder": "Workout Name",
                  "type": "text",
                  "value": "",
                },
                "ref": null,
                "rendered": null,
                "type": "input",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "className": "workout-info-inputs workout-description",
                  "name": "workoutDesc",
                  "onChange": [Function],
                  "placeholder": "Workout Description (Optional)",
                  "type": "text",
                  "value": "",
                },
                "ref": null,
                "rendered": null,
                "type": "input",
              },
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <h4
                  className="exercise-header"
>
                  Exercises
</h4>,
                <ul
                  className="rendered-exercises"
>
                  <li
                                    className="rendered-exercise"
                  >
                                    <h5
                                                      className="rendered-ex-info"
                                    >
                                                      5
                                    </h5>
                                    <h5
                                                      className="rendered-ex-info"
                                    >
                                                      some exercise
                                    </h5>
                                    <button
                                                      className="rendered-ex-btn"
                                                      id={1519148514421}
                                                      onClick={[Function]}
                                    >
                                                      -
                                    </button>
                  </li>
</ul>,
                <div
                  className="create-exercises"
>
                  <input
                                    className="exercise-inputs exercise-number"
                                    name="reps"
                                    onChange={[Function]}
                                    placeholder="Reps"
                                    type="number"
                                    value=""
                  />
                  <input
                                    className="exercise-inputs exercise-name"
                                    name="exercise"
                                    onChange={[Function]}
                                    placeholder="Exercise"
                                    type="text"
                                    value=""
                  />
                  <button
                                    className="exercise-button"
                                    onClick={[Function]}
                  >
                                    +
                  </button>
</div>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Exercises",
                  "className": "exercise-header",
                },
                "ref": null,
                "rendered": "Exercises",
                "type": "h4",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <li
                      className="rendered-exercise"
>
                      <h5
                                            className="rendered-ex-info"
                      >
                                            5
                      </h5>
                      <h5
                                            className="rendered-ex-info"
                      >
                                            some exercise
                      </h5>
                      <button
                                            className="rendered-ex-btn"
                                            id={1519148514421}
                                            onClick={[Function]}
                      >
                                            -
                      </button>
</li>,
                  ],
                  "className": "rendered-exercises",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": "1519148514421",
                    "nodeType": "host",
                    "props": Object {
                      "children": Array [
                        <h5
                          className="rendered-ex-info"
>
                          5
</h5>,
                        <h5
                          className="rendered-ex-info"
>
                          some exercise
</h5>,
                        <button
                          className="rendered-ex-btn"
                          id={1519148514421}
                          onClick={[Function]}
>
                          -
</button>,
                      ],
                      "className": "rendered-exercise",
                    },
                    "ref": null,
                    "rendered": Array [
                      Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "children": 5,
                          "className": "rendered-ex-info",
                        },
                        "ref": null,
                        "rendered": 5,
                        "type": "h5",
                      },
                      Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "children": "some exercise",
                          "className": "rendered-ex-info",
                        },
                        "ref": null,
                        "rendered": "some exercise",
                        "type": "h5",
                      },
                      Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "children": "-",
                          "className": "rendered-ex-btn",
                          "id": 1519148514421,
                          "onClick": [Function],
                        },
                        "ref": null,
                        "rendered": "-",
                        "type": "button",
                      },
                    ],
                    "type": "li",
                  },
                ],
                "type": "ul",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <input
                      className="exercise-inputs exercise-number"
                      name="reps"
                      onChange={[Function]}
                      placeholder="Reps"
                      type="number"
                      value=""
/>,
                    <input
                      className="exercise-inputs exercise-name"
                      name="exercise"
                      onChange={[Function]}
                      placeholder="Exercise"
                      type="text"
                      value=""
/>,
                    <button
                      className="exercise-button"
                      onClick={[Function]}
>
                      +
</button>,
                  ],
                  "className": "create-exercises",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "className": "exercise-inputs exercise-number",
                      "name": "reps",
                      "onChange": [Function],
                      "placeholder": "Reps",
                      "type": "number",
                      "value": "",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "input",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "className": "exercise-inputs exercise-name",
                      "name": "exercise",
                      "onChange": [Function],
                      "placeholder": "Exercise",
                      "type": "text",
                      "value": "",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "input",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "+",
                      "className": "exercise-button",
                      "onClick": [Function],
                    },
                    "ref": null,
                    "rendered": "+",
                    "type": "button",
                  },
                ],
                "type": "div",
              },
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <h3>
                Post Workout
</h3>,
              "className": "Workout-post-btn",
              "onClick": [Function],
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Post Workout",
              },
              "ref": null,
              "rendered": "Post Workout",
              "type": "h3",
            },
            "type": "button",
          },
        ],
        "type": "form",
      },
      "type": "section",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
